--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "uk.co.borconi.emil.aagateway"
+        applicationId "com.snirpoapps.aausbtowifi"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0 Alpha"
+        versionName "1.0 Beta"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
