--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,9 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'com.google.android.gms:play-services-nearby:17.0.0'
+    //implementation 'com.google.android.gms:play-services-nearby:17.0.0'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     implementation 'pub.devrel:easypermissions:3.0.0'
     testImplementation 'junit:junit:4.12'
 }
